--- a/index.html
+++ b/index.html
@@ -153,7 +153,6 @@
             /* i po navbarze */
 
 
-
             /* headers! */
             h1, h2 {
                 color: black;
@@ -182,14 +181,16 @@
             	/*width: 100%;/* rwd? */
 
                 position: relative;
-                left: 2%;
+                left: 8%;
             }
 
             /* portfolio */
             #portfolio {
+                height: 100%;
+
                 background-image: url("img/cv-bg.jpg");
                 background-repeat: no-repeat;
-                background-size: 1200px 781px;
+                background-size: 100% 100%;
                 /*height: 781px;*/
             }
             .portfolio-kwadrat {
