--- a/index.html
+++ b/index.html
@@ -86,11 +86,8 @@
 
             .nav-buttons-top {
                 position: relative;
-                top: -42px;
+                bottom: 5%;
                 left: 95%;
-            }
-            .nav-buttons-top:hover {
-
             }
 
             /*
@@ -161,7 +158,7 @@
                 transition: width 2s;
             }
             header nav a:hover {
-                color: #BF9058;
+                color: #cc9900;
                 /* background-color: #ccc;
                 lepiej jakis inny efekt */
 
