--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
             https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700,300,300italic,400italic,500italic,700italic&subset=latin,latin-ext
             */
 
-        a {
-            text-decoration: none;
-        }
+            a {
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: none;
+            }
 
             body {
                 height: 100%;
@@ -750,6 +753,18 @@ $(document).ready(function(){
              //prevent page fom scrolling
              return false;
          });
+    </script>
+
+
+    <script>
+        $('.nav-buttons-top img').on({
+            mouseenter: function() {
+                $(this).attr('src', 'img/buttons/down-white.jpg');
+            },
+            mouseleave: function() {
+                $(this).attr('src', 'img/buttons/down-black.jpg');
+            }
+        });
     </script>
 
 
