--- a/index-przed-nav.html
+++ b/index-przed-nav.html
@@ -22,12 +22,6 @@
 
 	    <script src="js/modernizr.js"></script> <!-- Modernizr -->
 
-	    <!-- dot nav -->
-	    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-        <link rel="stylesheet" type="text/css" href="css/demo.css" />
-        <link rel="stylesheet" type="text/css" href="css/component.css" />
-        <script src="js/modernizr.min.js"></script>
-
 
         <!-- bootstrap files -->
         <!-- Latest compiled and minified CSS -->
@@ -44,7 +38,14 @@
             /* same czczionki
             https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700,300,300italic,400italic,500italic,700italic&subset=latin,latin-ext
             */
-            /* czcionki */
+
+            a {
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: none;
+            }
+
             body {
                 height: 100%;
                 font-size: 14px;
@@ -55,7 +56,12 @@
             }
             header {
                 font-weight: 500;
+                font-style: normal;
             }
+            footer a {
+                font-weight: normal;
+            }
+
             ::-moz-placeholder {
                 font-size: 0.7em;
                 font-weight: 100;
@@ -69,9 +75,6 @@
             .inside-inside-container {
                 font-size: 1.4em;
             }
-            table {
-            	font-size: 1.2em;
-            }
             /* po czcionkach */
 
             body {
@@ -81,12 +84,6 @@
 
                 width: 100%; /* wazne as fuck */
                 margin: 0 auto; /* moze dodac margines z gory? */
-            }
-            a {
-                text-decoration: none;
-            }
-            a:hover {
-                text-decoration: none;
             }
 
             .nav-buttons-top {
@@ -150,7 +147,7 @@
 
                 position: absolute;
                 top: 60px;
-                right: 40px;
+                right: 80px;
             }
             header nav ul {
                 padding: 0;
@@ -172,12 +169,15 @@
                 transition: width 2s;
             }
             header nav a:hover {
-                color: #F29B00;
+                color: #cc9900;
+                /* background-color: #ccc;
+                lepiej jakis inny efekt */
 
                 width: 300px;
             }
+
             header nav .active {
-                color: #F29B00;
+                color: #cc9900;
             }
             /* i po navbarze */
 
@@ -298,6 +298,7 @@
                 margin-bottom: 60px;
 
                 text-align: left;
+                font-size: 1.2em;
             }
 
             input, button, textarea {
@@ -393,16 +394,6 @@
         }
 
 
-        /* dot nav */
-        .dotstyle-circlegrow li {
-                display: block;
-                float: left;
-                clear: left;
-                z-index: 9999;
-            }
-        /* po dotnav */
-
-
         </style>
     </head>
 
@@ -440,19 +431,42 @@
 
 
 
-        <div class="container">
-                <div class="dotstyle dotstyle-circlegrow">
-                    <h2>Circle grow</h2>
-                    <ul>
-                        <li class="current"><a href="#">Home</a></li>
-                        <li><a href="#cv">About</a></li>
-                        <li><a href="#portfolio">Products</a></li>
-                        <li><a href="#caseStudy">Portfolio</a></li>
-                        <li><a href="#contact">Blog</a></li>
-                    </ul>
-                </div>
-        </div>
+        <nav id="cd-vertical-nav">
+		<ul>
+			<li>
+				<a href="#idHeader" data-number="1">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Strona Główna</span>
+				</a>
+			</li>
+			<li>
+				<a href="#cv" data-number="2">
+					<span class="cd-dot"></span>
+					<span class="cd-label">CV</span>
+				</a>
+			</li>
+			<li>
+				<a href="#portfolio" data-number="3">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Portfolio</span>
+				</a>
+			</li>
+			<li>
+				<a href="#caseStudy" data-number="4">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Case study</span>
+				</a>
+			</li>
+			<li>
+				<a href="#contact" data-number="5">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Kontakt</span>
+				</a>
+			</li>
+		</ul>
+	</nav>
     
+    <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
 
 
@@ -460,6 +474,8 @@
 
         <div id="cv" class="block2 height-block page">
             <div class="inside-container">
+
+
 
                 <div class="row">
                     <div class="col-md-3">
@@ -563,6 +579,40 @@
         <div id="caseStudy" class="block4 height-block page">
             <div class="inside-container">
 
+                    <nav id="cd-vertical-nav">
+        <ul>
+            <li>
+                <a href="#idHeader" data-number="1">
+                    <span class="cd-dot"></span>
+                    <span class="cd-label">Strona Główna</span>
+                </a>
+            </li>
+            <li>
+                <a href="#cv" data-number="2">
+                    <span class="cd-dot"></span>
+                    <span class="cd-label">CV</span>
+                </a>
+            </li>
+            <li>
+                <a href="#portfolio" data-number="3">
+                    <span class="cd-dot"></span>
+                    <span class="cd-label">Portfolio</span>
+                </a>
+            </li>
+            <li>
+                <a href="#caseStudy" data-number="4">
+                    <span class="cd-dot"></span>
+                    <span class="cd-label">Case study</span>
+                </a>
+            </li>
+            <li>
+                <a href="#contact" data-number="5">
+                    <span class="cd-dot"></span>
+                    <span class="cd-label">Kontakt</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
                 <div id="caseStudy-text">
                     <h1>Case study</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ultrices vel nunc sed faucibus. Suspendisse vestibulum arcu urna. Vivamus ut nulla tempor, sagittis mauris at, scelerisque lorem. Ut auctor ante at mauris congue, ac luctus lacus sagittis. Nam maximus ante vel metus interdum consequat. Donec ac tortor magna. Ut ac dolor mi. Sed rutrum a odio sed maximus. Morbi sem risus, lobortis eu ipsum posuere, varius suscipit orci. In hac habitasse.</p>
@@ -779,17 +829,6 @@ $(document).ready(function(){
                 $(this).attr('src', 'img/buttons/up-black.jpg');
             }
         });
-    </script>
-
-    <script src="js/dots.js"></script>
-    <script>
-        [].slice.call( document.querySelectorAll( '.dotstyle > ul' ) ).forEach( function( nav ) {
-            new DotNav( nav, {
-                callback : function( idx ) {
-                    //console.log( idx )
-                }
-            } );
-        } );
     </script>
 
 
